--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Portfolio</title>
-</head>
-<body>
-    <iframe src="https://fguru06.github.io/my-portfolio/" width="100%" height="800px" style="border:none;"></iframe>
-</body>
+	<head>
+		<title>Portfolio</title>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.min.js"></script>
+		<style>
+			body {
+				margin: 0;
+			}
+		</style>
+	</head>
+	<body>
+		<iframe
+			src="https://fguru06.github.io/my-portfolio/"
+			width="100%"
+			style="border: none"
+		></iframe>
+		<script>
+			iFrameResize({ log: true });
+		</script>
+	</body>
 </html>
