--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,9 @@
 			body {
 				margin: 0;
 			}
+			iframe {
+				min-height: 800px; /* Adjust this value as needed */
+			}
 		</style>
 	</head>
 	<body>
