--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,11 +4,13 @@
 		<title>Portfolio</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.min.js"></script>
 		<style>
+			html,
 			body {
 				margin: 0;
+				height: 100%;
 			}
 			iframe {
-				min-height: 800px; /* Adjust this value as needed */
+				min-height: 100vh; /* Ensure iframe takes full viewport height */
 			}
 		</style>
 	</head>
