--- a/coolplay/index.html
+++ b/coolplay/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>Musa's portfolio</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.min.js"></script>
 		<style>
 			html,
