--- a/coolplay/index.html
+++ b/coolplay/index.html
@@ -8,10 +8,12 @@
 			body {
 				margin: 0;
 				height: 100%;
+				overflow: hidden; /* Prevent scrolling on the main page */
 			}
 			iframe {
-				min-height: 100vh; /* Ensure iframe takes full viewport height */
-				overflow: auto; /* Allow scrolling */
+				width: 100%;
+				height: 100%;
+				border: none;
 			}
 		</style>
 	</head>
